--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,6 +9,7 @@ on:
   push:
     branches:
       - main
+      - pr-gha-test
 permissions:
   contents: read
 
@@ -39,6 +40,8 @@ jobs:
           extra_nix_config: "system-features = nixos-test benchmark big-parallel kvm"
       - name: Check .nix formatting
         run: nix fmt -- --fail-on-change
+      - name: Run nix develop
+        run: nix develop
       - name: Check nix flake show runs successfully
         run: nix flake show --system ${{ matrix.arch }}
       - name: Run nix flake check
